# claude-code-changelog-analysis

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml  update.yml
data/: embeddings.parquet  enriched.parquet  map_data.parquet  raw_entries.parquet  taxonomy_exploration.md  versions.json
docs/: about.html  analysis.html  filter_panel.html  index.html  map.html
docs/data/: analysis.json  entries.json  meta.json
eval/: compare.py  run_models.py
notebooks/: explore.py
scripts/: dashboard.py  embed.py  enrich.py  explore_taxonomy.py  fetch.py  mapviz.py  nav.py  parse.py  reduce.py  run_pipeline.py
tests/: test_parse.py
