[project]
name = "claude-code-changelog-analysis"
version = "0.1.0"
description = "Toolkit for analyzing trends in the Claude Code changelog"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "cohere>=5.0",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "umap-learn>=0.5",
    "datamapplot>=0.5",
    "toponymy>=0.4",
    "fast-hdbscan>=0.3",
    "nest-asyncio>=1.5",
    "evoc",
    "transformers>=4.0",
    "marimo>=0.10",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "glasbey>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
